--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -20,5 +20,13 @@
     "start": "nodemon app"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DaniloKasalica/dk-back.git"
+  },
+  "bugs": {
+    "url": "https://github.com/DaniloKasalica/dk-back/issues"
+  },
+  "homepage": "https://github.com/DaniloKasalica/dk-back#readme"
 }
